--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,29 @@
+<center>
+
+	<div class="jumbotron"   >
+		
+			<h1 style="font-size: 100px"> Instalar Ruby on Rails!</h1>
+			<p style="font-size: 80px">Guía paso-paso</p>
+			<p> 
+				<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+				<%= link_to 'INSTALAR AHORA', elige_path, class: "btn btn-primary btn-lg btn-block" %>
+				</div>
+				</div>
+			</p>
 
 
-<div class="jumbotron center">
-  <div class="container">
-    <h1>Instalar Rails!</h1>
-    <p>Fácil fácil, instrucciones paso a paso</p>
-    <p> 
-		<%= link_to 'Intalar ahora', elige_path, class: "btn btn-primary btn-lg" %>
-    </p>
-  </div>
-</div>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-2"><h2> ¿Qué es esto?</h2>
+					<p style="font-size: 15px">  InstalarRails.com es la forma más fácil de instalar Rails en tu computador ya sea Windows, Mac o otro..</p>
+				</div>
+				<div class="col-md-4 "><h2> ¿Cómo funciona?</h2>
+					<p style="font-size: 15px"> Acá podrás seguir de manera fácil y corta, como instalar todo lo necesario para trabajar en Ruby on Rails!</p>
+				</div>
+			</div>
+		
+	</div>
+</center>
 
 
 
