--- a/app/views/pages/mac4.html.erb
+++ b/app/views/pages/mac4.html.erb
@@ -2,49 +2,30 @@
 	<h3><strong>Instala Rails like a Boss!</strong></h3>
 </div>
 
-<div class="container">
+<div class="jumbotron" style="background-color: purple; color: white" >
+	<div class="container">
 
-	<h2> Configurar Git </h2>
-	 <h4>Command line</h4>
-	  <p></p>
-	  <p>
-	    1-En un Mac, podemos encontrar el Terminal abriendo Spotlight
-	    (el pequeño ícono en la parte superior derecha de tu Mac),
-	    y luego escribe 'Terminal'.
-	  </p>
-	  <p>
-	    2- Alternativamente, tu puedes buscar en la carpeta "Applications".
-	    La ruta sería la siguiente 'Applications -> Utilities -> Terminal')
-	  </p>
-	  <h4>Verificar la instalación</h4>
-	  <p>1- En la command line, escribe:</p>
-	  <p>$ ruby --version</p>
-	  <p>2- Resultado esperado:</p>
-	  <p>ruby 1.9.0p195 (2013-05-14 revision 40734) [x86_64-darwin12.4.0]</p>
-	  <p>3- Luego, asegúrate que instalast Rails escribiendo:</p>
-	  <p>$ rails --version</p>
-	  <p>4- Resultado esperado:</p>
-	  <p>Rails 3.2</p>
-	  <h4>Configurar Git</h4>
-	  <p>1- En el terminal escribe esto:</p>
-	  <p>git config --global user.name "Your Actual Name"</p>
-	  <p>2- Luego escribe:</p>
-	  <p>git config --global user.email "Your Actual Email"</p>
-	  <p>3- Para verificar la instalación, escribe:</p>
-	  <p>git config --get user.name</p>
-	  <p>4- Tu nombre debería aparecer. Ahora escribe:</p>
-	  <p>git config --get user.email</p>
-	  <p>Tu email debería aparecer</p>
-	   <h4>Instalar editor de texto: Sublime Text</h4>
-	   
-	  <p>1- Para descargar "Sublime Text" ingresa a: <a href="http://www.sublimetext.com/" target="_blank"> www.sublimetext.com</a>  y descárgalo en tu computador (hint: haz click botón grande azul).</p>
-	  <p>2- Luego que el archivo ha sido descargado totalmente,  haz doble click en el archivo y una ventana se abrirá.</p>
+		<h2> Configurar Git </h2>
+		
+		<h4>Configurar Git</h4>
+		<p>1- En el terminal escribe esto:</p>
+		<div class="well well-sm " style="color: black">git config --global user.name "Your Actual Name"</div>
+		<p>2- Luego escribe:</p>
+		<div class="well well-sm " style="color: black">git config --global user.email "Your Actual Email"</div>
+		<p>3- Para verificar la instalación, escribe:</p>
+		<div class="well well-sm " style="color: black">git config --get user.name</div>
+		<p>4- Tu nombre debería aparecer. Ahora escribe:</p>
+		<div class="well well-sm " style="color: black">git config --get user.email</div>
+		<p>Tu email debería aparecer</p>
+	</div>  
+	
+	
 
 
 </div>
 
 <center>
-<%= link_to 'Atrás', mac3_path, class: "btn btn-primary btn-lg" %>
-<%= link_to 'Siguiente', mac5_path, class: "btn btn-primary btn-lg" %>
+	<%= link_to 'Atrás', mac3_path, class: "btn btn-primary btn-lg " %>
+	<%= link_to 'Siguiente', mac5_path, class: "btn btn-primary btn-lg " %>
 </center>
 
