--- a/app/views/pages/win_2.html.erb
+++ b/app/views/pages/win_2.html.erb
@@ -1,20 +1,25 @@
 <div class="well well-sm ">
 	<h3><strong>Instala Rails like a Boss!</strong></h3>
+
+
+<div class="jumbotron" style="background-color: brown; color: white" >
+	<div class="container">
+	<h2>Command line</h2>
+		<p>1- Abrir cmd, (escribir cmd en inicio de windows)</p>
+		<img src= "cmd.png">
+		<p>2- En el terminal escribir:</p>
+		<div class="well well-sm " style="color: black">gem install rails</div>
+		<p>3- Para verificar la instalación, escribir en el terminal:</p>
+		<div class="well well-sm " style="color: black">rails -v</div>
+		<p>4- Resultado esperado</p>
+		<p> Rails 3.2</p>
+
+	</div>
 </div>
+	<center>
+		<%= link_to 'Atrás', win_1_path, class: "btn btn-primary btn-lg " %>
+		<%= link_to 'Siguiente', win_3_path, class: "btn btn-primary btn-lg" %>
 
-<div class="container">
-	<h4>Command line</h4>
-	  <p>1- Abrir cmd, (escribir cmd en inicio de windows)</p>
-	  <p>2- En el terminal escribir:</p>
-	  <p>gem install rails</p>
-	  <p>3- Para verificar la instalación, escribir en el terminal:</p>
-	  <p>rails -v</p>
-	  <p>4- Resultado esperado</p>
-	  <p> Rails 3.2</p>
-
-	<%= link_to 'Atrás', win_1_path, class: "btn btn-primary btn-lg" %>
-	<%= link_to 'Siguiente', win_3_path, class: "btn btn-primary btn-lg" %>
-
-
+	</center>
 
 </div>
