--- a/app/views/pages/win_3.html.erb
+++ b/app/views/pages/win_3.html.erb
@@ -1,15 +1,17 @@
-<div class="well well-sm ">
+
+<div class="well well-sm" >
 	<h3><strong>Instala Rails like a Boss!</strong></h3>
 </div>
+<div class="jumbotron" style="background-color: brown; color: white" >
+	<div class="container">
+	<h1>Instalar editor de texto: Sublime Text</h1>
+		<p>1- Para descargar "Sublime Text" ingresa a: <a href="http://www.sublimetext.com/" target="_blank"> www.sublimetext.com</a>  y descárgalo en tu computador (hint: haz click botón grande azul).</p>
+		<p>2- Luego que el archivo ha sido descargado totalmente,  haz doble click en el archivo y una ventana se abrirá.</p>
+	</div>
+</div>
+<center>
+	<%= link_to 'Atrás', win_2_path, class: "btn btn-primary btn-lg" %>
+	<%= link_to 'Siguiente', final_path, class: "btn btn-primary btn-lg" %>
+</center>
 
-<div class="container">
-    	 <h4>Instalar editor de texto: Sublime Text</h4>
-      <p>1- Para descargar "Sublime Text" ingresa a: <a href="http://www.sublimetext.com/" target="_blank"> www.sublimetext.com</a>  y descárgalo en tu computador (hint: haz click botón grande azul).</p>
-      <p>2- Luego que el archivo ha sido descargado totalmente,  haz doble click en el archivo y una ventana se abrirá.</p>
 
-    <%= link_to 'Atrás', win_2_path, class: "btn btn-primary btn-lg" %>
-    <%= link_to 'Siguiente', win_4_path, class: "btn btn-primary btn-lg" %>
-
-
-
-    </div>
