--- a/app/views/pages/Final.html.erb
+++ b/app/views/pages/Final.html.erb
@@ -2,8 +2,9 @@
 
 	<div class="jumbotron"   >
 		
-<h1> Master!!! Lo hiciste! </h1>
+		<h1> Master!!! Lo hiciste! </h1>
 
-<img src="success-kid.jpg">
-</div>
+		<img src="success-kid.jpg">
+	</div>
+</center>
 
