add disqus on page elige

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <center>
 
-	<div class="jumbotron"   >
+	<div style= "background-image: url(home-bg.jpg) "img-responsive" alt="Responsive image" "  >
 		
 			<h1 style="font-size: 100px"> Instalar Ruby on Rails!</h1>
 			<p style="font-size: 80px">Guía paso-paso</p>
