change on landing and version rails text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
 </head>
 <body>
 
-
+<%= render 'layouts/header' %>
 <%= yield %>
 
 <%= render 'layouts/disqus' %>
-
+<%= render 'layouts/footer' %>
 </body>
 </html>
