--- a/app/views/pages/elige.html.erb
+++ b/app/views/pages/elige.html.erb
@@ -1,9 +1,5 @@
-<div class="well well-sm ">
-	<h3><strong>Instala Rails like a Boss!</strong></h3>	
-</div>
-
 <center>
-	<div class="jumbotron" >
+	<div class="jumbotron" style= "padding-top: 10px">
 		<div class="container">
 			<h1>Primero elige que tipo de sistema operativo tienes</h1>
 
