--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
-<center>
 
-	<div style= "background-image: url(home-bg.jpg) "img-responsive" alt="Responsive image" "  >
-		
-			<h1 style="font-size: 100px"> Instalar Ruby on Rails!</h1>
-			<p style="font-size: 80px">Guía paso-paso</p>
+
+	<div style= "background-image: url(home-bg.jpg); height:500px; padding-top:20px"  >
+		<center>
+			<h1 style="font-size: 100px; padding-top:100px"> Instalar Ruby on Rails!</h1>
+			<p style="font-size: 80px; padding-top:20px">Guía paso-paso</p>
 			<p> 
 				<div class="row">
 				<div class="col-md-4 col-md-offset-4">
@@ -13,17 +13,20 @@
 			</p>
 
 
-			<div class="row">
-				<div class="col-md-4 col-md-offset-2"><h2> ¿Qué es esto?</h2>
-					<p style="font-size: 15px">  InstalarRails.com es la forma más fácil de instalar Rails en tu computador ya sea Windows, Mac o otro..</p>
+			
+		</center>
+	</div>
+<div class="jumbotron" style="background-color: brown; color: white" >
+
+<div class="row">
+				<div class="col-md-3 col-md-offset-2"><h2> ¿Qué hay acá?</h2>
+					<p style="font-size: 15px"> Pasos de cómo instalar todo lo necesario para que empieces a programar en Rails de la forma más fácil.</p>
 				</div>
-				<div class="col-md-4 "><h2> ¿Cómo funciona?</h2>
-					<p style="font-size: 15px"> Acá podrás seguir de manera fácil y corta, como instalar todo lo necesario para trabajar en Ruby on Rails!</p>
+				<div class="col-md-3 col-md-offset-3 "><h2> ¿Cómo funciona?</h2>
+					<p style="font-size: 15px"> Sigue las instrucciones y verás como instalar Rails, Ruby, Sublime (editor de texto para escribir código).</p>
 				</div>
 			</div>
-		
-	</div>
-</center>
+</div> 
 
 
 
