--- a/app/views/pages/mac3.html.erb
+++ b/app/views/pages/mac3.html.erb
@@ -1,7 +1,3 @@
-<div class="well well-sm ">
-	<h3><strong>Instala Rails like a Boss!</strong></h3>
-</div>
-
 <div class="jumbotron" style="background-color: purple; color: white" >
 	<div class="container">
 		<h2> A instalar Rails!!</h2>
@@ -26,11 +22,11 @@
 	  <p>1- En el terminal, escribe:</p>
 	 <div class="well well-sm " style="color: black"> ruby --version</div>
 	  <p>2- Resultado esperado:</p>
-	  <p>ruby 1.9.0p195 (2013-05-14 revision 40734) [x86_64-darwin12.4.0]</p>
+	  <p>ruby 2.0</p>
 	  <p>3- Luego, asegúrate que instalast Rails escribiendo:</p>
 	  <div class="well well-sm " style="color: black"> rails --version</div>
 	  <p>4- Resultado esperado:</p>
-	  <p>Rails 3.2</p>
+	  <p>Rails 4.0</p>
 	</div>
 </div>
 <center>
