--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <center>
 <div style="background-color: white ">  
-	De modo de ayudarte a empezar, siempre apoyándote <%=link_to "En 1 Mes (www.en1mes.com)","www.en1mes.com"%> te hace la vida más fácil.</div> 
+	De modo de ayudarte a empezar, siempre apoyándote <strong><%=link_to "En 1 Mes","http://www.en1mes.com/"%> </strong>te hace la vida más fácil.</div> 
 </div>
 </center>
