change on home, finall and on sublime pages

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -8,14 +8,16 @@
 
 		<div class="col-md-5 col-md-offset-1">
 			<h2 style=" padding-top:80px"> <strong>Ahora cómo puedes seguir?</strong></h2>
-			<ol>
-				<li> <img src= "/assets/logo.png"> <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> te enseña paso a paso como construir una aplicación web en menos de un mes.</li>
-				<li> Empieza a construir tu aplicación en el lenguaje RockStar paso a paso. <%=link_to "Inscríbete ahora aquí","http://www.en1mes.com/"%>. </li>
+			
+				<p style="padding-top: 20px"> <span class="glyphicon glyphicon-thumbs-up"></span> <img src= "/assets/logo.png"> <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> te enseña paso a paso como construir una aplicación web en menos de un mes.</p>
 				
+				<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
+				Contruye tu aplicación en el lenguaje RockStar paso a paso. <%=link_to "Inscríbete ahora aquí","http://www.en1mes.com/"%>. 
 				
+				</p>
 
-			</ol>
-			<p> Otras opciones para aprender son:
+			
+			<p style="padding-top: 20px"> <span class="glyphicon glyphicon-stop"></span>Otras opciones para aprender son:
 				</p>
 <p>
 				<%=link_to " RailsCasts","http://railscasts.com/"%>, <%=link_to "RailsGuides","http://guides.rubyonrails.org/"%>, <%=link_to "Code Academy","http://www.codecademy.com/"%>, <%=link_to "Code.org","http://code.org/"%>,<%=link_to "General Assembly","https://generalassemb.ly/"%>, <%=link_to "Ruby and Rails tutorial de Michael Hartl","http://ruby.railstutorial.org/ruby-on-rails-tutorial-book"%>, <%=link_to "Code School","https://www.codeschool.com/"%>
