--- a/app/views/pages/win_1.html.erb
+++ b/app/views/pages/win_1.html.erb
@@ -3,7 +3,7 @@
 		<h1> Instalando Rails </h1>
 
 		<ol>
-			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/" %> y escoge la opción que gustes de Windows</li>
+			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/" %> y escoge versión de más a la izquiera de Windows</li>
 			
 			<a href= "http://www.railsinstaller.com/" ><img src="irails.png"></a>
 			<li> Luego de que se ha descargado totalmente el archivo, dale doble click para abrirlo.</li>
@@ -12,7 +12,7 @@
 			</li>
 			<img src="setup.png">
 			<li> Cuando se te solicite,  escribe tu nombre y correo electrónico.
-				(No te preocupes, nadie verá estos datos por lo que te enviaran SPAM).
+				(No te preocupes, nadie verá estos datos por lo No te enviaran SPAM).
 			</li>
 
 		</ol>
