--- a/app/views/pages/win_2.html.erb
+++ b/app/views/pages/win_2.html.erb
@@ -2,8 +2,9 @@
 <div class="jumbotron" style="background-color: brown; color: white" >
 	<div class="container">
 	<h2>Command line</h2>
-		<p>1- Abrir cmd, (escribir cmd en inicio de windows)</p>
-		<img src= "cmd.png">
+		<p>1- Abrir cmd (Esto lo puedes haciendo click en el botón windows <img src="bot-win.png" class="img-rounded"> y luego escribiendo cmd)</p>
+		<img src= "cmd.png" class="img-rounded">
+
 		<p>2- En el terminal escribir:</p>
 		<div class="well well-sm " style="color: black">gem install rails</div>
 		<p>3- Para verificar la instalación, escribir en el terminal:</p>
