--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,6 @@
-<div class="well well-sm">
+
+<div class="well well-sm" style="margin-bottom:0px">
+<div class= "container">
 	<h3><strong>Instala Rails like a Boss!</strong></h3>	
+</div>
 </div>
