--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 
 
-	<div style= "background-image: url(home-bg.jpg); height:500px; padding-top:20px"  >
+	<div style= "background-image: url(home-bg.jpg); padding-top:5px; background-size: 2800px 100%; background-repeat:no-repeat; margin-bottom: -10px"  >
 		<center>
-			<h1 style="font-size: 100px; padding-top:100px"> Instalar Ruby on Rails!</h1>
-			<p style="font-size: 80px; padding-top:20px">Guía paso-paso</p>
+			<h1 style="font-size: 100px; padding-top:80px"> Instalar Ruby on Rails!</h1>
+			<p style="font-size: 80px; padding-top:5px">Guía paso-paso</p>
 			<p> 
 				<div class="row">
 				<div class="col-md-4 col-md-offset-4">
@@ -11,11 +11,9 @@
 				</div>
 				</div>
 			</p>
-
-
-			
-		</center>
+</center>
 	</div>
+
 <div class="jumbotron" style="background-color: brown; color: white" >
 
 <div class="row">
