change on background image and positions things on elige page

--- a/app/views/pages/elige.html.erb
+++ b/app/views/pages/elige.html.erb
@@ -1,18 +1,18 @@
 <center>
 	<div class="jumbotron" style= "padding-top: 10px">
 		<div class="container">
-			<h1>Primero elige que tipo de sistema operativo tienes</h1>
+			<h1 style="padding-top: 30px">Primero elige que tipo de sistema operativo tienes</h1>
 
 			<div class row>
 				<div class="col-md-2 col-md-offset-4">
-					<p><img src= "win.png"></p>
-					<p>
+					<p style="padding-top:20px"><img src= "win.png"></p>
+					<p style="padding-top:20px">
 						<%= link_to 'Windows', win_1_path, class: "btn btn-primary btn-lg btn-block" %></p>
 					</div>
 					<div class="col-md-2 ">
-						<p><img src= "mac.png"></p>
+						<p style="padding-top:20px"><img src= "mac.png"></p>
 
-						<p>	<%= link_to 'Mac', mac1_path, class: "btn btn-primary btn-lg btn-block" %> </p>
+						<p style="padding-top:20px" >	<%= link_to 'Mac', mac1_path, class: "btn btn-primary btn-lg btn-block"  %> </p>
 					</div>
 				</div>
 			</div>
