--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 
-	<div style= "background-image: url(home-bg.jpg); padding-top:5px; background-size: 2800px 100%; background-repeat:no-repeat; margin-bottom: -10px"  >
+	<div style= "background-image: url(home-bg.jpg); padding-top:5px; background-repeat:no-repeat; margin-bottom: -10px"  >
 		<center>
 			<h1 style="font-size: 100px; padding-top:80px"> Instalar Ruby on Rails!</h1>
 			<p style="font-size: 80px; padding-top:5px">Guía paso-paso</p>
