change on final , win1 and win2 pages

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -7,12 +7,12 @@
 		</div>
 
 		<div class="col-md-5 col-md-offset-1">
-			<h2 style=" padding-top:80px"> <strong>Ahora cómo puedes seguir?</strong></h2>
-			
+			<h2 style=" padding-top:60px"> <strong > Si estás siguiendo el taller  de <%= link_to "One Month/En 1 Mes", "http://www.en1mes.com/"%> </strong> haz click <%= link_to "aquí", "http://www.onemonth.cl/workshops/16"%> para continuar construyendo tu aplicación web </h2>
+			<h3> En caso contrario te contamos que: </h3>
 				<p style="padding-top: 20px"> <span class="glyphicon glyphicon-thumbs-up"></span> <img src= "/assets/logo.png"> <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> te enseña paso a paso como construir una aplicación web en menos de un mes.</p>
 				
 				<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
-				Contruye tu aplicación en el lenguaje RockStar paso a paso. <%=link_to "Inscríbete ahora aquí","http://www.en1mes.com/"%>. 
+				Contruye tu  también una aplicación en el lenguaje RockStar paso a paso. <%=link_to "Inscríbete ahora aquí","http://www.en1mes.com/"%>. 
 				
 				</p>
 
