--- a/app/views/pages/win_1.html.erb
+++ b/app/views/pages/win_1.html.erb
@@ -3,9 +3,9 @@
 		<h1> Instalando Rails </h1>
 
 		<ol>
-			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/" %> y escoge versión de más a la izquiera de Windows</li>
+			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/", target:"_blank" %> y escoge versión de windows de más a la izquierda.</li>
 			
-			<a href= "http://www.railsinstaller.com/" ><img src="irails.png"></a>
+			<a href= "http://www.railsinstaller.com/" , target="_blank" ><img src="irails.png"></a>
 			<li> Luego de que se ha descargado totalmente el archivo, dale doble click para abrirlo.</li>
 
 			<li> Dale click "Next" a todos los pasos, esta bien dejar la configuración por defecto.
