--- a/app/views/pages/win_2.html.erb
+++ b/app/views/pages/win_2.html.erb
@@ -5,12 +5,14 @@
 		<p>1- Abrir cmd (Esto lo puedes haciendo click en el botón windows <img src="bot-win.png" class="img-rounded"> y luego escribiendo cmd)</p>
 		<img src= "cmd.png" class="img-rounded">
 
-		<p>2- En el terminal escribir:</p>
+		<p>2- En el terminal escribir el comando de abajo y luego apretar enter:</p>
 		<div class="well well-sm " style="color: black">gem install rails</div>
-		<p>3- Para verificar la instalación, escribir en el terminal:</p>
+		<p> <strong> Nota:</strong> Esto puedo demorar, así que paciencia </p>
+		<p>3- Para verificar la instalación, escribir en el terminal el comando de la línea siguiente y luego presionar enter:</p>
 		<div class="well well-sm " style="color: black">rails -v</div>
 		<p>4- Resultado esperado</p>
-		<p> Rails 4.0</p>
+		<p><strong> Rails 4.0 </strong></p>
+		<p>  No te preocupes si dice por ejemplo 4.0.1, si parte con 4.0 está todo bien </p>
 
 	</div>
 </div>
