--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -9,10 +9,10 @@
 		<div class="col-md-5 col-md-offset-1">
 			<h2 style=" padding-top:60px"> <strong > Si estás siguiendo el taller  de <%= link_to "One Month/En 1 Mes", "http://www.en1mes.com/"%> </strong> haz click <%= link_to "aquí", "http://www.onemonth.cl/workshops/16"%> para continuar construyendo tu aplicación web </h2>
 			<h3> En caso contrario te contamos que: </h3>
-				<p style="padding-top: 20px"> <span class="glyphicon glyphicon-thumbs-up"></span> <img src= "/assets/logo.png"> <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> te enseña paso a paso como construir una aplicación web en el framework Rockstar (Ruby on Rails) en menos de 1 mes.
+				<p style="padding-top: 20px"> <span class="glyphicon glyphicon-thumbs-up"></span> <img src= "/assets/logo.png"> <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> te enseña paso a paso como construir una aplicación web en menos de un mes.</p>
 				
-			
-				Empieza a construir ahora tu  también una aplicación en menos de 1 mes. <%=link_to "Inscríbete ahora aquí","http://www.en1mes.com/"%>. 
+				<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
+				Aprenderás contruyendo tu aplicación web además de Rails, HTML5, avaScript, SQL Databases, Git, Heroku y todas las últimas tecnologías. <%=link_to "Más información aquí","http://www.en1mes.com/"%>. 
 				
 				</p>
 
