gem google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
+ <%= analytics_init if Rails.env.production? %>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
@@ -14,10 +14,12 @@
 </head>
 <body>
 
+
 <%= render 'layouts/header' %>
 <%= yield %>
 
 <%= render 'layouts/disqus' %>
 <%= render 'layouts/footer' %>
+
 </body>
 </html>
