change on route fro mac2 to mac1

--- a/app/views/pages/mac2.html.erb
+++ b/app/views/pages/mac2.html.erb
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<center>
-		<%= link_to 'Atrás', elige_path, class: "btn btn-primary btn-lg" %>
+		<%= link_to 'Atrás', mac1_path, class: "btn btn-primary btn-lg" %>
 		<%= link_to 'Siguiente', homebrew_path, class: "btn btn-primary btn-lg" %>
 
 	</center>
