--- a/app/views/pages/win_1.html.erb
+++ b/app/views/pages/win_1.html.erb
@@ -3,9 +3,14 @@
 		<h1> Instalando Rails </h1>
 
 		<ol>
-			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/", target:"_blank" %> y escoge versión de windows de más a la izquierda.</li>
-			
+			<li> Primero que todo debes: <%= link_to "Descargar RailsInstaller", "railsinstaller-2.2.2.exe" %>
+			<% if false %>
+			ESTO ES UN COMENTARIO HASTA EL END
+			<li> Ingresa a: <%= link_to 'www.railsinstaller.com', "http://www.railsinstaller.com/", target:"_blank" %> y escoge versión de windows de más a la izquierda.</li>			
+
 			<a href= "http://www.railsinstaller.com/" , target="_blank" ><img src="irails.png"></a>
+			<% end %>
+			
 			<li> Luego de que se ha descargado totalmente el archivo, dale doble click para abrirlo.</li>
 
 			<li> Dale click "Next" a todos los pasos, esta bien dejar la configuración por defecto.
