change on word on page on mac rails install

--- a/app/views/pages/mac3.html.erb
+++ b/app/views/pages/mac3.html.erb
@@ -8,7 +8,7 @@
 			<li> Dale click "Next" a todos los pasos, esta bien dejar la configuración por defecto.
 			</li>
 			<li> Cuando se te solicite,  escribe tu nombre y correo electrónico.
-				(No te preocupes, nadie verá estos datos por lo que te enviaran SPAM).
+				(No te preocupes, nadie verá estos datos por NO te enviaran SPAM).
 			</li>
 
 		</ol>
