new design for the page, homebrew part updated

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
+<hr>
+
 <center>
-<div style="background-color: white ">  
-	De modo de ayudarte a empezar, siempre apoyándote <strong><%=link_to "En 1 Mes","http://www.en1mes.com/"%> </strong>te hace la vida más fácil.</div> 
+<div style="background-color: white; font-size:140% ">  
+	<strong><%=link_to "En 1 Mes","http://www.en1mes.com/"%> </strong>te hace la vida más fácil.</div> 
 </div>
 </center>
+
+<hr>
