--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,11 @@
-
 <div class="well well-sm" style="margin-bottom:0px">
 <div class= "container">
-	<h3><strong>Instala Rails like a Boss!</strong></h3>	
+	<div class="pull-left">
+		<%= link_to image_tag("logo.png", :class => 'img-responsive', :size => '48x48'), "http://www.en1mes.com" %> 
+	</div>
+	<div class="pull-left">
+			<h3><strong> Instala ruby on rails paso a paso</strong></h3>	
+	</div>
+
 </div>
 </div>
