--- a/app/views/pages/railsmac95.html.erb
+++ b/app/views/pages/railsmac95.html.erb
@@ -1,5 +1,3 @@
-<div class="jumbotron" style="background-color:  orange; color: white" >
-	<div class="container">
 
 <h1>Instalar Rails</h1>
 
@@ -13,10 +11,8 @@
 
 <p>El resultado esperado es:</p>
 
-<p>Rails 4.0</p>
+<p>Rails 4.0.x donde x puede ser cualquier número</p> 
 
-</div>
-</div>
 <center>
 		<%= link_to 'Atrás', rvm_path, class: "btn btn-primary btn-lg" %>
 		<%= link_to 'Siguiente', text95_path, class: "btn btn-primary btn-lg" %>
