--- a/app/views/pages/win_2.html.erb
+++ b/app/views/pages/win_2.html.erb
@@ -1,18 +1,17 @@
-
-<div class="jumbotron" style="background-color: brown; color: white" >
+<div class="jumbotron">
 	<div class="container">
-	<h2>Command line</h2>
+		<h2>Command line</h2>
 		<p>1- Abrir cmd (Esto lo puedes haciendo click en el botón windows <img src="bot-win.png" class="img-rounded"> y luego escribiendo cmd)</p>
 		<img src= "cmd.png" class="img-rounded">
 
-		<p>2- En el terminal escribir el comando de abajo y luego apretar enter:</p>
+		<p style='margin-top:20px'>2- En el terminal escribir el comando de abajo y luego apretar enter:</p>
 		<div class="well well-sm " style="color: black">gem install rails</div>
 		<p> <strong> Nota:</strong> Esto puedo demorar, así que paciencia </p>
 		<p>3- Para verificar la instalación, escribir en el terminal el comando de la línea siguiente y luego presionar enter:</p>
 		<div class="well well-sm " style="color: black">rails -v</div>
 		<p>4- Resultado esperado</p>
 		<p><strong> Rails 4.0 </strong></p>
-		<p>  No te preocupes si dice por ejemplo 4.0.1, si parte con 4.0 está todo bien </p>
+		<p>  No te preocupes si dice por ejemplo 4.0.1 o 4.0.2 si es mayor a 4.0  está todo bien </p>
 
 	</div>
 </div>
