--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Instalar Rails</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
- <%= analytics_init if Rails.env.production? %>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+
+
+	<title>Instalar Rails</title>
+
+	<%= stylesheet_link_tag    "application", :media => "all" %>
+	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
+	<%= analytics_init if Rails.env.production? %>
+
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 
-<%= render 'layouts/header' %>
-<%= yield %>
+	<%= render 'layouts/header' %>
 
-<%= render 'layouts/disqus' %>
-<%= render 'layouts/footer' %>
+    <div class="jumbotron">
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				<%= yield %>
+			</div>
+		</div>
+	</div>
+
+	<%= render 'layouts/disqus' %>
+	<%= render 'layouts/footer' %>
 
 </body>
 </html>
