making rvm part simpe

--- a/app/views/pages/rvm.html.erb
+++ b/app/views/pages/rvm.html.erb
@@ -1,15 +1,10 @@
 
 		<h1>Instalar RVM y Ruby</h1>
 
-		<p>1- Para instalar RVM, escribe esto en el terminal:</p>
+		<p>1- Para instalar RVM y ruby simultaneamente escribe esto en el terminal:</p>
 
-		<div class="well well-sm " style="color: black">curl -L get.rvm.io | bash -s stable</div>
+		<div class="well well-sm " style="color: black">\curl -L https://get.rvm.io | bash -s stable --ruby</div>
 
-		<p>2- Cierra el terminal y luego ábrelo</p>
-
-		<p>3- Para instalar Ruby, escribe el terminal esto:</p>
-
-		<div class="well well-sm " style="color: black">rvm install 2.0.0</div>
 		<p>
 			(Nota: Esto instalará Ruby y puede demorar un poco. Si tu obtienes página entera de instrucciones, comenzando con 'Ruby y las gemas base necesarias para tu elección...', debes presionar Q para saltar eso. Si rvm install 2.0.0 dice: autoreconf was not found in the PATH, escribe esto en el terminal: brew install automake
 		</p>
