change on final page error

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -6,7 +6,8 @@
 	</div>
 
 	<div class="col-md-5 col-md-offset-1" style="font-size:140%">
-		<h2>  Quieres aprender más, sigue en el taller <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> </h2>
+		<h2>  Quieres aprender más, sigue en el taller <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> 
+		</h2>
 
 		<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
 			Aprenderás contruyendo tu aplicación web además de Rails.
@@ -18,9 +19,9 @@
 				<li> Heroku y todas las últimas tecnologías. </li>
 				<%=link_to "Más información del taller aquí","http://www.en1mes.com/"%>. 
 			</ul>
+		</p>
 
-
-		</div>
+	</div>
 </div>
 	<center>
 		<p style="font-size:180%; margin-top: 40px;">
@@ -289,10 +290,11 @@
 
 		</div>
 
-<div class="col-md-5 col-md-offset-1">
-	<h2> Tutorial de como crear tu primer proyecto usando usando Ruby on Rails.</h2>
-	<%= image_tag ("empezando.png"), class: "img-responsive" %>
-</div>
+		<div class="col-md-5 col-md-offset-1">
+			<h2> Tutorial de como crear tu primer proyecto usando usando Ruby on Rails.
+			</h2>
+			<%= image_tag ("empezando.png"), class: "img-responsive" %>
+		</div>
 
-</div>
+	</div>
 
