change image_tag to img on final page

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -293,7 +293,8 @@
 		<div class="col-md-5 col-md-offset-1">
 			<h2> Tutorial de como crear tu primer proyecto usando usando Ruby on Rails.
 			</h2>
-			<%= image_tag ("empezando.png"), class: "img-responsive" %>
+			 
+			<img src="empezando.png" class="img-responsive" alt="Responsive image">
 		</div>
 
 	</div>
