--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-4 col-md-offset-1">
 		<h1> Lo hiciste master! </h1>
 
-		<img src="success-kid.jpg">
+		<img src="success-kid.jpg" class="img-responsive" alt="Responsive image">
 	</div>
 
 	<div class="col-md-5 col-md-offset-1" style="font-size:140%">
