--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -1,23 +1,24 @@
 <div class="row">
 	<div class="col-md-4 col-md-offset-1">
-		<h1> Lo hiciste master! </h1>
+	
 
-		<img src="success-kid.jpg" class="img-responsive" alt="Responsive image">
+		<img src="success-kid.jpg" class="img-responsive" alt="Responsive image" style="
+    margin-top: 20px;">
 	</div>
 
 	<div class="col-md-5 col-md-offset-1" style="font-size:140%">
-		<h2>  Quieres aprender más, sigue en el taller <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> 
+		<h2>  Quieres aprender más, inscríbete en el taller <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> 
 		</h2>
 
 		<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
-			Aprenderás contruyendo tu aplicación web además de Rails.
+			Aprenderás contruyendo tu aplicación web además de Rails:
 			<ul>
 				<li> HTML5 </li> 
 				<li> javaScript </li> 
 				<li> SQL Databases </li> 
 				<li> Git </li> 
 				<li> Heroku y todas las últimas tecnologías. </li>
-				<%=link_to "Más información del taller aquí","http://www.en1mes.com/"%>. 
+				<%=link_to "Más información del taller aquí","http://www.en1mes.com/users/sign_in"%>. 
 			</ul>
 		</p>
 
