change on texts on final page

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -7,18 +7,19 @@
 	</div>
 
 	<div class="col-md-5 col-md-offset-1" style="font-size:140%">
-		<h2>  Quieres aprender más, inscríbete en el taller <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> 
+		<h2>  ¿Quieres aprender más? Inscríbete en el taller de <%= link_to "En 1 Mes", "http://www.en1mes.com/"%> 
 		</h2>
 
 		<p style="padding-top: 20px"><span class="glyphicon glyphicon-thumbs-up"></span>
-			Aprenderás contruyendo tu aplicación web además de Rails:
+			Aprenderás desde cero contruyendo tu propia aplicación web además de Rails:
 			<ul>
 				<li> HTML5 </li> 
-				<li> javaScript </li> 
+				<li> CSS </li> 
+				<li> JavaScript </li> 
 				<li> SQL Databases </li> 
 				<li> Git </li> 
-				<li> Heroku y todas las últimas tecnologías. </li>
-				<%=link_to "Más información del taller aquí","http://www.en1mes.com/users/sign_in"%>. 
+				<li> Heroku y todas las últimas tecnologías </li>
+				<%=link_to "Más información del taller aquí","http://www.en1mes.com/users/sign_in"%> 
 			</ul>
 		</p>
 
