change alt text on images at final page

--- a/app/views/pages/finall.html.erb
+++ b/app/views/pages/finall.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-4 col-md-offset-1">
 	
 
-		<img src="success-kid.jpg" class="img-responsive" alt="Responsive image" style="
+		<img src="success-kid.jpg" class="img-responsive" alt="instalar ruby on rails " style="
     margin-top: 20px;">
 	</div>
 
@@ -296,7 +296,7 @@
 			<h2> Tutorial de como crear tu primer proyecto usando usando Ruby on Rails.
 			</h2>
 			 
-			<img src="empezando.png" class="img-responsive" alt="Responsive image">
+			<img src="empezando.png" class="img-responsive" alt="tutorial ruby on rails">
 		</div>
 
 	</div>
