add text on win_1 view,explain to not use accents

--- a/app/views/pages/win_1.html.haml
+++ b/app/views/pages/win_1.html.haml
@@ -13,7 +13,8 @@
       Dale click "Next" a todos los pasos, esta bien dejar la configuración por defecto.
     %img{:src => "setup.png"}
       %li
-        Cuando se te solicite,  escribe tu nombre y correo electrónico.
+        Luego se abrirá una ventana y se te solicitará en inglés tu nombre y correo electrónico. 
+        %strong Importante NO usar tildes ni la letra ñ, tampoco otros caracteres del tipo ¨ en tu nombre
         (No te preocupes, nadie verá estos datos por lo No te enviaran SPAM).
 .row
   %center
