add text on win_1 view

--- a/app/views/pages/win_1.html.haml
+++ b/app/views/pages/win_1.html.haml
@@ -15,7 +15,7 @@
       %li
         Luego se abrirá una ventana y se te solicitará en inglés tu nombre y correo electrónico. 
         %strong Importante NO usar tildes ni la letra ñ, tampoco otros caracteres del tipo ¨ en tu nombre
-        (No te preocupes, nadie verá estos datos por lo No te enviaran SPAM).
+        (No te preocupes por entregar estos datos, nadie los verá por lo que Nadie te enviará SPAM).
 .row
   %center
     = link_to 'Atrás', elige_path, class: "btn btn-primary btn-lg "
