change on git2 view, adding more information

--- a/app/views/pages/git2.html.erb
+++ b/app/views/pages/git2.html.erb
@@ -2,11 +2,11 @@
 
 <p>1- En el terminal escribe:</p>
 
-<div class="well well-sm " style="color: black">git config --global user.name "Your Actual Name"</div>
+<div class="well well-sm " style="color: black">git config --global user.name "escribir acá tu nombre sin tildes ni usando letra ñ"</div>
 
 <p>2- Luego escribe:</p>
 
-<div class="well well-sm " style="color: black">git config --global user.email "Your Actual Email"</div>
+<div class="well well-sm " style="color: black">git config --global user.email "escribir acá tu email"</div>
 
 <p>3- Para verificar la instalación, escribe:</p>
 
